--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
   "name": "LeafProjectApp",
-  "version": "0.0.1",
+  "version": "1.0.0-alpha.1",
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "test": "jest"
   },
   "dependencies": {
-    "apsl-react-native-button": "^3.0.2",
     "firebase": "^3.6.10",
     "react": "15.4.2",
     "react-native": "0.41.2",
-    "react-native-router-flux": "^3.37.0"
+    "react-native-elements": "^0.9.7",
+    "react-native-router-flux": "^3.37.0",
+    "react-native-vector-icons": "^4.0.0"
   },
   "devDependencies": {
     "babel-jest": "19.0.0",
