--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "dependencies": {
     "firebase": "^3.6.10",
     "react": "15.4.2",
-    "react-native": "0.41.2",
+    "react-native": "^0.42.0",
     "react-native-elements": "^0.9.7",
     "react-native-router-flux": "^3.37.0",
     "react-native-vector-icons": "^4.0.0"
