--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
     "test": "jest"
   },
   "dependencies": {
-    "firebase": "^3.6.10",
+    "firebase": "3.6.10",
     "react": "15.4.2",
-    "react-native": "^0.42.0",
-    "react-native-elements": "^0.9.7",
-    "react-native-i18n": "^1.0.0",
-    "react-native-router-flux": "^3.37.0",
-    "react-native-vector-icons": "^4.0.0"
+    "react-native": "0.42.0",
+    "react-native-camera": "0.6.0",
+    "react-native-elements": "0.9.7",
+    "react-native-i18n": "1.0.0",
+    "react-native-router-flux": "3.37.0",
+    "react-native-vector-icons": "4.0.0"
   },
   "devDependencies": {
     "babel-jest": "19.0.0",
