--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-native-camera": "0.6.0",
     "react-native-elements": "0.9.7",
     "react-native-i18n": "1.0.0",
+    "react-native-offline-mode": "^0.1.5",
     "react-native-router-flux": "3.37.0",
     "react-native-vector-icons": "4.0.0"
   },
