--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-native": "0.42.0",
     "react-native-camera": "0.6.0",
     "react-native-elements": "0.9.7",
+    "react-native-fetch-blob": "^0.10.2",
     "react-native-i18n": "1.0.0",
     "react-native-offline-mode": "^0.1.5",
     "react-native-router-flux": "3.37.0",
