fix ios bug with AppVersion and custom fonts

--- a/ios/LeafProjectApp/Info.plist
+++ b/ios/LeafProjectApp/Info.plist
@@ -47,6 +47,11 @@
     <array>
       <string>MaterialCommunityIcons.ttf</string>
       <string>SimpleLineIcons.ttf</string>
+      <string>EvilIcons.ttf</string>
+      <string>FontAwesome.ttf</string>
+      <string>Foundation.ttf</string>
+      <string>MaterialIcons.ttf</string>
+      <string>Zocial.ttf</string>
     </array>
     <key>UIRequiredDeviceCapabilities</key>
     <array>
