--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "15.4.2",
     "react-native": "0.42.0",
     "react-native-camera": "0.6.0",
+    "react-native-device-info": "^0.10.1",
     "react-native-elements": "0.9.7",
     "react-native-fetch-blob": "0.10.2",
     "react-native-i18n": "1.0.0",
