--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-native-elements": "0.9.7",
     "react-native-fetch-blob": "0.10.2",
     "react-native-i18n": "1.0.0",
+    "react-native-image-picker": "^0.26.2",
     "react-native-offline-mode": "0.1.5",
     "react-native-router-flux": "3.37.0",
     "react-native-vector-icons": "4.0.0"
