--- a/package.json
+++ b/package.json
@@ -8,30 +8,30 @@
     "lint": "./node_modules/.bin/eslint --fix *.js"
   },
   "dependencies": {
-    "firebase": "3.6.10",
-    "react": "15.4.2",
+    "firebase": "^3.8.0",
+    "react": "^15.5.4",
     "react-native": "0.42.0",
-    "react-native-camera": "0.6.0",
-    "react-native-device-info": "^0.10.1",
-    "react-native-elements": "0.9.7",
-    "react-native-fetch-blob": "0.10.2",
+    "react-native-camera": "^0.7.0",
+    "react-native-device-info": "^0.10.2",
+    "react-native-elements": "^0.11.1",
+    "react-native-fetch-blob": "^0.10.4",
     "react-native-i18n": "1.0.0",
-    "react-native-image-picker": "^0.26.2",
+    "react-native-image-picker": "^0.26.3",
     "react-native-offline-mode": "0.1.5",
-    "react-native-router-flux": "3.37.0",
-    "react-native-vector-icons": "4.0.0"
+    "react-native-router-flux": "^3.38.0",
+    "react-native-vector-icons": "^4.0.1"
   },
   "devDependencies": {
+    "babel-eslint": "^7.2.2",
     "babel-jest": "19.0.0",
-    "babel-eslint": "^6.1.0",
     "babel-preset-react-native": "1.9.1",
-    "jest": "19.0.0",
-    "react-test-renderer": "15.4.2",
-    "eslint": "^2.13.1",
-    "eslint-config-airbnb": "9.0.1",
-    "eslint-plugin-import": "1.9.2",
-    "eslint-plugin-jsx-a11y": "1.5.3",
-    "eslint-plugin-react": "^5.2.2"
+    "eslint": "^3.19.0",
+    "eslint-config-airbnb": "^14.1.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^4.0.0",
+    "eslint-plugin-react": "^6.10.3",
+    "jest": "^19.0.2",
+    "react-test-renderer": "^15.5.4"
   },
   "jest": {
     "preset": "react-native"
