--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
     "react-native-camera": "^0.7.0",
     "react-native-device-info": "^0.10.2",
     "react-native-elements": "^0.11.1",
+    "react-native-fbsdk": "^0.5.0",
     "react-native-fetch-blob": "^0.10.4",
     "react-native-fit-image": "^1.4.8",
     "react-native-i18n": "1.0.0",
     "react-native-image-picker": "^0.26.3",
     "react-native-offline-mode": "0.1.5",
-    "react-native-responsive-image": "^2.0.2",
     "react-native-router-flux": "^3.38.0",
     "react-native-vector-icons": "^4.0.1"
   },
