--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   },
   "dependencies": {
     "firebase": "^3.8.0",
-    "react": "^15.5.4",
-    "react-native": "0.42.0",
+    "react": "^16.0.0-alpha.6",
+    "react-native": "^0.43.4",
     "react-native-camera": "^0.7.0",
     "react-native-device-info": "^0.10.2",
     "react-native-elements": "^0.11.1",
