--- a/ios/LeafProjectApp/Info.plist
+++ b/ios/LeafProjectApp/Info.plist
@@ -48,6 +48,12 @@
 	<dict>
 		<key>NSExceptionDomains</key>
 		<dict>
+		  <key>NSAllowsArbitraryLoads</key>
+      <true/>
+      <key>NSAllowsArbitraryLoadsInWebContent</key>
+      <true/>
+      <key>NSAllowsLocalNetworking</key>
+      <true/>
 			<key>amazonaws.com</key>
 			<dict>
 				<key>NSExceptionAllowsInsecureHTTPLoads</key>
