--- a/package.json
+++ b/package.json
@@ -9,20 +9,20 @@
     "version-bump": "./version-bump-ios.sh"
   },
   "dependencies": {
-    "firebase": "^3.8.0",
-    "react": "^16.0.0-alpha.6",
-    "react-native": "^0.43.4",
-    "react-native-camera": "^0.7.0",
-    "react-native-device-info": "^0.10.2",
-    "react-native-elements": "^0.11.1",
-    "react-native-fbsdk": "^0.5.0",
-    "react-native-fetch-blob": "^0.10.4",
-    "react-native-fit-image": "^1.4.8",
+    "firebase": "3.8.0",
+    "react": "^15.5.4",
+    "react-native": "0.42.3",
+    "react-native-camera": "0.7.0",
+    "react-native-device-info": "0.10.2",
+    "react-native-elements": "0.11.1",
+    "react-native-fbsdk": "0.5.0",
+    "react-native-fetch-blob": "0.10.4",
+    "react-native-fit-image": "1.4.8",
     "react-native-i18n": "1.0.0",
-    "react-native-image-picker": "^0.26.3",
+    "react-native-image-picker": "0.26.3",
     "react-native-offline-mode": "0.1.5",
-    "react-native-router-flux": "^3.38.0",
-    "react-native-vector-icons": "^4.0.1"
+    "react-native-router-flux": "3.38.0",
+    "react-native-vector-icons": "4.0.1"
   },
   "devDependencies": {
     "babel-eslint": "^7.2.2",
