update firebase to v3.9.0

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "version-bump": "./version-bump-ios.sh"
   },
   "dependencies": {
-    "firebase": "3.8.0",
+    "firebase": "^3.9.0",
     "react": "16.0.0-alpha.6",
     "react-native": "0.44.0",
     "react-native-camera": "0.7.0",
