--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native-fit-image": "1.4.8",
     "react-native-i18n": "1.0.0",
     "react-native-image-picker": "0.26.3",
+    "react-native-img-cache": "^1.3.1",
     "react-native-offline-mode": "0.1.5",
     "react-native-router-flux": "3.38.0",
     "react-native-vector-icons": "4.0.1"
