--- a/package.json
+++ b/package.json
@@ -9,30 +9,29 @@
     "version-bump": "./version-bump-ios.sh"
   },
   "dependencies": {
-    "firebase": "^3.9.0",
+    "firebase": "3.9.0",
     "react": "16.0.0-alpha.6",
     "react-native": "0.44.0",
-    "react-native-camera": "0.7.0",
+    "react-native-camera": "0.8.0",
     "react-native-device-info": "0.10.2",
-    "react-native-elements": "^0.11.2",
+    "react-native-elements": "^0.12.1",
     "react-native-fbsdk": "0.5.0",
-    "react-native-fetch-blob": "^0.10.5",
+    "react-native-fetch-blob": "0.10.5",
     "react-native-fit-image": "1.4.8",
     "react-native-i18n": "1.0.0",
     "react-native-image-picker": "0.26.3",
-    "react-native-img-cache": "^1.3.1",
     "react-native-offline-mode": "0.1.5",
-    "react-native-router-flux": "3.38.0",
-    "react-native-vector-icons": "4.0.1"
+    "react-native-router-flux": "3.39.1",
+    "react-native-vector-icons": "4.1.1"
   },
   "devDependencies": {
-    "babel-eslint": "^7.2.2",
-    "babel-jest": "19.0.0",
-    "babel-preset-react-native": "1.9.1",
-    "eslint": "^3.19.0",
-    "eslint-plugin-react": "^6.10.3",
-    "jest": "^19.0.2",
-    "react-test-renderer": "^15.5.4"
+    "babel-eslint": "7.2.2",
+    "babel-jest": "20.0.1",
+    "babel-preset-react-native": "1.9.2",
+    "eslint": "3.19.0",
+    "eslint-plugin-react": "7.0.1",
+    "jest": "20.0.1",
+    "react-test-renderer": "15.5.4"
   },
   "jest": {
     "preset": "react-native"
